resolved the overlapping issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
-
 /* Full height setup */
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -48,8 +48,12 @@ footer {
 }
 
 @keyframes float-stars {
-  0% { transform: translate(0, 0); }
-  100% { transform: translate(100px, 300px); }
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(100px, 300px);
+  }
 }
 .animate-stars {
   opacity: 0.4;
@@ -57,45 +61,43 @@ footer {
   will-change: transform;
 }
 
-
 .profile-description {
-  background-image: url('https://images.pexels.com/photos/29506610/pexels-photo-29506610.jpeg');
+  background-image: url("https://images.pexels.com/photos/29506610/pexels-photo-29506610.jpeg");
   opacity: 85%;
 }
 
-
-.connectionmodalcontainer{
-    display: flex;
-    padding: 15px;
-    position: fixed;
-    width: auto;
-    border: 1px solid black;
-    border-radius: 8px;
-    background: rgba(2,6,12,.9);
-    color: #fff;
-    bottom: 0;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    z-index: 9999;
-    gap: 30px;
-    align-items: center;
-    pointer-events: auto;
+.connectionmodalcontainer {
+  display: flex;
+  padding: 15px;
+  position: fixed;
+  width: auto;
+  border: 1px solid black;
+  border-radius: 8px;
+  background: rgba(2, 6, 12, 0.9);
+  color: #fff;
+  bottom: 0;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  z-index: 9999;
+  gap: 30px;
+  align-items: center;
+  pointer-events: auto;
 }
 
-.refreshbtton{
-    color: #fff;
-    border: unset;
-    background: unset;
+.refreshbtton {
+  color: #fff;
+  border: unset;
+  background: unset;
 }
 
-.refreshbtton:hover{
-    font-weight: bold;
-    transform: scale(1.25);
+.refreshbtton:hover {
+  font-weight: bold;
+  transform: scale(1.25);
 }
 
-.online_status{
-    display: flex;
-    position: relative;
+.online_status {
+  display: flex;
+  position: relative;
 }
 
 /* @keyframes shimmer {
@@ -107,18 +109,18 @@ footer {
     }
 } */
 
-.phantom-card{
-    background: linear-gradient(-45deg , #eee 40%, #fafafa 50%, #eee 60%);
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    transition: box-shadow ease 0.3s;
-    background-size: 300%;
-    background-position-x: 100%;
-    animation: shimmer 1s infinite linear;
+.phantom-card {
+  background: linear-gradient(-45deg, #eee 40%, #fafafa 50%, #eee 60%);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  transition: box-shadow ease 0.3s;
+  background-size: 300%;
+  background-position-x: 100%;
+  animation: shimmer 1s infinite linear;
 }
 
 @keyframes shimmer {
-   to {
-      background-position-x: 0%
-   }
+  to {
+    background-position-x: 0%;
+  }
 }
